Fix scrolling issue on mobile

--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 html, body {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
+}
+
+body {
+  position: relative;
 }
